fix: Link colors

--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,10 @@
           font-size: .8em;
       }
 
+      a:visited {
+          color: inherit;
+      }
+
       a, code, em, strong {
           display: inline;
       }
