--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
 <body>
   <h1>TU Dresden Mathematik Bachelor</h1>
 
-  <strong><a href="pdfs/schedule/1-semester.pdf">My schedule</a></strong>
+  <strong><a href="pdf/schedule/1-semester.pdf">My schedule</a></strong>
 
   <p><a href="https://github.com/kalehmann/TuDDMatheBa">Checkout the sources on GitHub!</a></p>
   <p>Inspired by a <a href="https://secretgeek.github.io/html_wysiwyg/html.html">html quine</a></p>
