feat: Center content

--- a/html/index.html
+++ b/html/index.html
@@ -48,6 +48,9 @@
           background-color: #1c1c1c;
           color: #cccccc;
           font-size: 1.2em;
+	  margin: auto;
+	  max-width: 40rem;
+	  padding: 2rem;
       }
 
       style {
