--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,9 @@
 
   <h2>Current courses</h2>
   <ul>
-    <li><a href="pdf/pr10/pr10.pdf">Programmieren - Grundlegende Konzepte</a></li>
+    <li><a href="pdf/an10/an10.pdf">Analysis - Grundlegende Konzepte</a></li>
     <li><a href="pdf/la10/la10.pdf">Lineare Algebra - Grundlegende Konzepte</a></li>
+    <li><a href="pdf/pr10/pr10.pdf">Programmieren - Grundlegende Konzepte</a></li>
   </ul>
 
   <p><a href="https://github.com/kalehmann/TuDDMatheBa">Checkout the sources on GitHub!</a></p>
