--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
 
   <h2>Current courses</h2>
   <ul>
+    <li><a href="pdf/inf-b-210/inf-b-210.pdf">Algorithmen und Datenstrukturen</a></li>
     <li><a href="pdf/an10/an10.pdf">Analysis - Grundlegende Konzepte</a></li>
     <li><a href="pdf/la10/la10.pdf">Lineare Algebra - Grundlegende Konzepte</a></li>
     <li><a href="pdf/pr10/pr10.pdf">Programmieren - Grundlegende Konzepte</a></li>
