feat: Linked new locations

--- a/html/index.html
+++ b/html/index.html
@@ -5,14 +5,14 @@
 <body>
   <h1>TU Dresden Mathematik Bachelor</h1>
 
-  <strong><a href="pdf/schedule/1-semester.pdf">My schedule</a></strong>
+  <strong><a href="schedules/1-semester.pdf">My schedule</a></strong>
 
   <h2>Current courses</h2>
   <ul>
-    <li><a href="pdf/inf-b-210/inf-b-210.pdf">Algorithmen und Datenstrukturen</a></li>
-    <li><a href="pdf/an10/an10.pdf">Analysis - Grundlegende Konzepte</a></li>
-    <li><a href="pdf/la10/la10.pdf">Lineare Algebra - Grundlegende Konzepte</a></li>
-    <li><a href="pdf/pr10/pr10.pdf">Programmieren - Grundlegende Konzepte</a></li>
+    <li><a href="courses/inf-b-210/">Algorithmen und Datenstrukturen</a></li>
+    <li><a href="courses/an10/">Analysis - Grundlegende Konzepte</a></li>
+    <li><a href="courses/la10/">Lineare Algebra - Grundlegende Konzepte</a></li>
+    <li><a href="courses/pr10/">Programmieren - Grundlegende Konzepte</a></li>
   </ul>
 
   <p><a href="https://github.com/kalehmann/TuDDMatheBa">Checkout the sources on GitHub!</a></p>
