feat: Better style for the main page

--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,7 @@
       * {
           display: block;
           font-family: Monospace;
+	  padding: .5em 0;
           text-decoration: none;
       }
 
@@ -44,10 +45,6 @@
           margin: 0;
       }
       
-      html > *, body > *, head > *, ul > * {
-          padding-left: 1rem;
-      }
-      
       blockquote, style {
           white-space: pre-wrap;
       }
@@ -55,10 +52,14 @@
       html {
           background-color: #1c1c1c;
           color: #cccccc;
-          font-size: 1.2em;
+          font-size: 1.4em;
 	  margin: auto;
-	  max-width: 40rem;
+	  max-width: 60rem;
 	  padding: 2rem;
+      }
+
+      ul {
+	  padding: 0;
       }
 
       style {
