--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 
   <h2>Current courses</h2>
   <ul>
-    <li><a href="courses/pr10/">Programmieren - Weiterführende Konzepte</a></li>
+    <li><a href="courses/pr10/">Programmieren - Weiterfuehrende Konzepte</a></li>
   </ul>
 
   <h2>Old courses</h2>
