feat: Link an20 on main page

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
 
   <h2>Current courses</h2>
   <ul>
+    <li><a href="courses/an20/">Analysis - Weiterfuehrende Konzepte</a></li>
     <li><a href="courses/pr20/">Programmieren - Weiterfuehrende Konzepte</a></li>
   </ul>
 
