--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 
   <h2>Current courses</h2>
   <ul>
-    <li><a href="courses/inf-b-210/">Algorithmen und Datenstrukturen</a></li>
+    <li><a href="courses/aud/">Algorithmen und Datenstrukturen</a></li>
     <li><a href="courses/an10/">Analysis - Grundlegende Konzepte</a></li>
     <li><a href="courses/la10/">Lineare Algebra - Grundlegende Konzepte</a></li>
   </ul>
