feat: Updated list of courses on index page

--- a/html/index.html
+++ b/html/index.html
@@ -7,14 +7,15 @@
 
   <h2>Current courses</h2>
   <ul>
-    <li><a href="courses/aud/">Algorithmen und Datenstrukturen</a></li>
-    <li><a href="courses/an10/">Analysis - Grundlegende Konzepte</a></li>
-    <li><a href="courses/la10/">Lineare Algebra - Grundlegende Konzepte</a></li>
+    <li><a href="courses/la20/">Lineare Algebra - Weiterfuehrende Konzepte</a></li>
   </ul>
 
   <h2>Old courses</h2>
   <ul>
+    <li><a href="courses/aud/">Algorithmen und Datenstrukturen</a></li>
+    <li><a href="courses/an10/">Analysis - Grundlegende Konzepte</a></li>
     <li><a href="courses/an20/">Analysis - Weiterfuehrende Konzepte</a></li>
+    <li><a href="courses/la10/">Lineare Algebra - Grundlegende Konzepte</a></li>
     <li><a href="courses/pr10/">Programmieren - Grundlegende Konzepte</a></li>
     <li><a href="courses/pr20/">Programmieren - Weiterfuehrende Konzepte</a></li>
   </ul>
