feat: Added course "Programmierung"

--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
   <h2>Old courses</h2>
   <ul>
     <li><a href="courses/aud/">Algorithmen und Datenstrukturen</a></li>
+    <li><a href="courses/prog">Programmierung</a></li>
     <li><a href="courses/an10/">Analysis - Grundlegende Konzepte</a></li>
     <li><a href="courses/an20/">Analysis - Weiterfuehrende Konzepte</a></li>
     <li><a href="courses/la10/">Lineare Algebra - Grundlegende Konzepte</a></li>
